@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-11T00:39:45Z",
+  "timestamp" : "2022-05-11T08:11:10Z",
   "count_outdated" : 1050,
   "uniques_outdated" : 67,
-  "count" : 1438,
-  "uniques" : 78,
+  "count" : 1439,
+  "uniques" : 79,
   "views" : [
     {
       "timestamp": "2022-04-30T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-05-10T00:00:00Z",
       "count": 2,
       "count_minmax": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-11T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
     }
