@@ -1,3 +1,9 @@
+2022-05-11T08:11:10Z:
+* notice: last 14d: all unq: 389 3
+* notice: prev accum: outdated-all outdated-unq / all unq: 1050 67 / 1438 78
+* notice: next accum: outdated-all outdated-unq / all unq: 1050 67 / 1439 79
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +2 +3 / -0 -0
+
 2022-05-11T00:39:45Z:
 * notice: last 14d: all unq: 388 3
 * notice: prev accum: outdated-all outdated-unq / all unq: 1050 67 / 1436 77
